<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/patronym"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patronym"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg"
        android:inputType="date"/>
    <EditText
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quit"
        android:inputType="date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="delete"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required" />
</LinearLayout>
